--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <h1 id="greeting" class="hidden"></h1>
 
 
+    <!-- clock -->
+    <h2 id="clock">00:00</h2>
+    
     <script src="/js/greetings.js"></script>
 </body>
 </html>
