--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <h2 id="clock">00:00</h2>
     
     <script src="/js/greetings.js"></script>
+    <script src="/js/clock.js"></script>
 </body>
 </html>
