--- a/index.html
+++ b/index.html
@@ -18,11 +18,25 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
 
-
     <!-- clock -->
     <h2 id="clock">00:00</h2>
+
+    <!-- todo list -->
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To do and Press Enter" required>
+    </form>
+
+    <ul id="todo-list">
+        <li>
+            <span>hello</span>
+            <button>❌</button>
+        </li>
+    </ul>
+
+
     
     <script src="/js/greetings.js"></script>
     <script src="/js/clock.js"></script>
+    <script src="/js/todo.js"></script>
 </body>
 </html>
