--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
         </li>
     </ul>
 
+    <!-- quotes -->
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+
 
     
     <script src="/js/greetings.js"></script>
     <script src="/js/clock.js"></script>
     <script src="/js/todo.js"></script>
+    <script src="/js/quotes.js"></script>
 </body>
 </html>
