--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     <script src="/js/clock.js"></script>
     <script src="/js/todo.js"></script>
     <script src="/js/quotes.js"></script>
+    <script src="/js/background.js"></script>
 </body>
 </html>
