--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <span></span>
     </div>
 
+    <!-- weather -->
+    <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
 
     
     <script src="/js/greetings.js"></script>
@@ -46,5 +51,6 @@
     <script src="/js/todo.js"></script>
     <script src="/js/quotes.js"></script>
     <script src="/js/background.js"></script>
+    <script src="/js/weather.js"></script>
 </body>
 </html>
