--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
     <!-- clock -->
     <h2 id="clock">00:00</h2>
 
+    <!-- weather -->
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+
     <!-- todo list -->
     <form id="todo-form">
-        <input type="text" placeholder="Write a To do and Press Enter" required>
+        <input type="text" placeholder="Write a To do and Press Enter key." required>
     </form>
 
     <ul id="todo-list">
-        <li>
-            <span>hello</span>
-            <button>❌</button>
-        </li>
+
     </ul>
 
     <!-- quotes -->
@@ -39,11 +42,7 @@
         <span></span>
     </div>
 
-    <!-- weather -->
-    <div id="weather">
-        <span></span>
-        <span></span>
-      </div>
+    
 
     
     <script src="/js/greetings.js"></script>
