--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Momentum</title>
 </head>
 <body>
@@ -45,11 +45,11 @@
     
 
     
-    <script src="/js/greetings.js"></script>
-    <script src="/js/clock.js"></script>
-    <script src="/js/todo.js"></script>
-    <script src="/js/quotes.js"></script>
-    <script src="/js/background.js"></script>
-    <script src="/js/weather.js"></script>
+    <script src="./js/greetings.js"></script>
+    <script src="./js/clock.js"></script>
+    <script src="./js/todo.js"></script>
+    <script src="./js/quotes.js"></script>
+    <script src="./js/background.js"></script>
+    <script src="./js/weather.js"></script>
 </body>
 </html>
